2008-05-01  Jens-Michael Hoffmann  <jensmh@gmx.de>

    * src/lib/geodata/handlers/dgml/DgmlElementDictionary.h
    * src/lib/geodata/handlers/dgml/DgmlStorageLayoutTagHandler.cpp
    * src/lib/geodata/handlers/dgml/DgmlAttributeDictionary.h
    * src/lib/geodata/handlers/dgml/DgmlElementDictionary.cpp
    * src/lib/geodata/handlers/dgml/DgmlAttributeDictionary.cpp
    * src/lib/geodata/handlers/dgml/DgmlStorageLayoutTagHandler.h
    * src/lib/geodata/scene/GeoSceneTexture.cpp
    * src/lib/geodata/scene/GeoSceneTexture.h
    * src/lib/geodata/CMakeLists.txt
    * docs/dgml2.dtd

    Add storageLayout element to DGML in order to support different
    storage layouts. This is needed for OpenStreetMap.

2008-04-30  Jens-Michael Hoffmann  <jensmh@gmx.de>

    * src/lib/geodata/handlers/dgml/DGMLSourceFileTagHandler.cpp
    * src/lib/geodata/handlers/dgml/DGMLTextureTagHandler.cpp
    * src/lib/geodata/handlers/dgml/DGMLHeadTagHandler.cpp
    * src/lib/geodata/handlers/dgml/DgmlVectorTagHandler.cpp
    * src/lib/geodata/handlers/dgml/DgmlInstallMapTagHandler.cpp
    * src/lib/geodata/handlers/dgml/DGMLAuxillaryDictionary.cpp
    * src/lib/geodata/handlers/dgml/DgmlAuxillaryDictionary.h
    * src/lib/geodata/handlers/dgml/DgmlMinimumTagHandler.cpp
    * src/lib/geodata/handlers/dgml/DGMLMinimumTagHandler.h
    * src/lib/geodata/handlers/dgml/DGMLNameTagHandler.cpp
    * src/lib/geodata/handlers/dgml/DGMLValueTagHandler.h
    * src/lib/geodata/handlers/dgml/DGMLMapTagHandler.h
    * src/lib/geodata/handlers/dgml/DGMLMaximumTagHandler.h
    * src/lib/geodata/handlers/dgml/DgmlDescriptionTagHandler.cpp
    * src/lib/geodata/handlers/dgml/DGMLDescriptionTagHandler.h
    * src/lib/geodata/handlers/dgml/DgmlPropertyTagHandler.h
    * src/lib/geodata/handlers/dgml/DGMLTargetTagHandler.h
    * src/lib/geodata/handlers/dgml/DGMLIconTagHandler.h
    * src/lib/geodata/handlers/dgml/DgmlGroupTagHandler.h
    * src/lib/geodata/handlers/dgml/DGMLItemTagHandler.h