@@ -1,3 +1,9 @@
+2008-05-01  Inge Wallin  <inge@lysator.liu.se>
+
+	// Paint the background for the mercator projection.
+	* src/lib/VectorMap.{h,cpp} (mercatorPaintBase): New function
+	* src/lib/VectorMap.cpp (paintBase): Call mercatorPaintBase
+
 2008-05-01  Jens-Michael Hoffmann  <jensmh@gmx.de>
 
     * src/lib/geodata/handlers/dgml/DgmlElementDictionary.h
